feat(theme-dev): add live editing support

--- a/sites/theme-dev/docs/help.mdx
+++ b/sites/theme-dev/docs/help.mdx
@@ -10,4 +10,13 @@ export default {
 };
 ```
 
+```jsx react-live
+() => (
+  <div>
+    <h2>a button</h2>
+    <button onClick={() => alert('clicked!')}>Click Me</button>
+  </div>
+);
+```
+
 Here is the help sections
